--- a/spring-boot-web-api/src/main/resources/application.properties
+++ b/spring-boot-web-api/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=spring-boot-web-api
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mariadb://localhost:3306/
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
